--- a/Font/singup.html
+++ b/Font/singup.html
@@ -15,7 +15,7 @@
         <form action="/signup" method="post" id="signupForm">
             <div class="group">
                 <input type="text" name="name" required placeholder=" ">
-                <label>Nombre/label>
+                <label>Nombre</label>
             </div>
             <div class="group">
                 <input type="text" name="apellido_paterno" required placeholder=" ">
@@ -28,6 +28,7 @@
             <div class="group">
                 <label for="Genero">Género</label>
                 <select name="Genero" id="Genero" required>
+                    <br>
                     <option value="" disabled selected>Selecciona una opción</option>
                     <option value="Masculino">Masculino</option>
                     <option value="Femenino">Femenino</option>
