--- a/Font/singup.html
+++ b/Font/singup.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear cuenta</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="singup.css">
 </head>
 
 <body>
@@ -26,15 +26,13 @@
                 <label>Apellido materno</label>
             </div>
             <div class="group">
-                <label for="Genero">Género</label>
-                <select name="Genero" id="Genero" required>
-                    <br>
+                <select name="Genero" required>
                     <option value="" disabled selected>Selecciona una opción</option>
                     <option value="Masculino">Masculino</option>
                     <option value="Femenino">Femenino</option>
-                    <option value="NoBinario">No binario</option>
                     <option value="Otro">Otro</option>
                 </select>
+                <label>Género</label>
             </div>
             <div class="group">
                 <input type="email" name="email" required placeholder=" ">
