--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width-device-width, initial-scale-1.0">
         <title>Tienda Digital</title>
-        <link rel="stylesheet" href="Font/style.css">
+        <link rel="stylesheet" href="Font/index.css">
     </head>
     <body>
         <header class="header">
