--- a/Font/login.html
+++ b/Font/login.html
@@ -25,7 +25,7 @@
                 <!--<div class="recordar">Recuperar contraseña</div>/* -->
                 <input type="submit" value="Iniciar Sesión">
                 <div class="registrarse">
-                    No tengo cuenta <a href="singup.html">registrarse</a>
+                    No tengo cuenta <a href="singup.html">Registrarse</a>
                 </div>
             </form>
         </div>
