--- a/Font/login.html
+++ b/Font/login.html
@@ -13,7 +13,7 @@
             <form method="post">
                 <div class="username">
                     <input type="text" required placeholder=" ">
-                    <label>Nombre de Usuario</label>
+                    <label>Nombre de usuario o email</label>
                     <span></span>
                 </div>
 
