--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
                 <input type="text" placeholder="Buscar en toda la tienda..." class="search-input">
             </div>
             <div class="user-actions">
-                <a href="Font/login.html" class="login-link" target="_blank">Iniciar sesión</a>
+                <a href="Font/login.html" class="login-link" >Iniciar sesión</a>
+                <p>ó</p>
+                <a href="Font/singup.html" class="login-link">Registrarse</a>
             </div>
         </header>
         <nav class="nav-categories">
