--- a/Font/login.html
+++ b/Font/login.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UFT-8">
-        <meta http-equiv="X-UA-Compatible" content="IE-edge">
-        <meta name="viewport" content="width-device-width, initial-scale-1.0">
-        <title>Inicio de Sesión</title>
-        <link rel="stylesheet" href="login.css">
-    </head>
-    <body>
-        <div class="formulario">
-            <h1>Inicio de sesión</h1>
-            <form method="post">
-                <div class="username">
-                    <input type="text" required placeholder=" ">
-                    <label>Nombre de usuario o email</label>
-                    <span></span>
-                </div>
+<html lang="es">
 
-                <div class="contrasena">
-                    <input type="password" required placeholder=" ">
-                    <label>Contraseña</label>
-                    <span></span>
-                </div>
-                <!--<div class="recordar">Recuperar contraseña</div>/* -->
-                <input type="submit" value="Iniciar Sesión">
-                <div class="registrarse">
-                    No tengo cuenta <a href="singup.html">Registrarse</a>
-                </div>
-            </form>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio de Sesión</title>
+    <link rel="stylesheet" href="login.css">
+</head>
+
+<body>
+    <div class="formulario">
+        <div class="logo">
+            <img src="imgs/mount logo.jpg" alt="Logo de la plataforma">
         </div>
-    </body>
+        <h1>Inicio de sesión</h1>
+        <form action="/login" method="post">
+            <div class="campo">
+                <input type="text" name="usuario" required placeholder=" ">
+                <label>Nombre de usuario o email</label>
+                <span></span>
+            </div>
+
+            <div class="campo">
+                <input type="password" name="contrasena" required placeholder=" ">
+                <label>Contraseña</label>
+                <span></span>
+            </div>
+
+            <input type="submit" value="Iniciar Sesión">
+
+            <div class="registrarse">
+                No tengo cuenta. <a href="singup.html">Registrarse</a>
+            </div>
+        </form>
+    </div>
+</body>
+
 </html>
