--- a/Font/singup.html
+++ b/Font/singup.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear cuenta</title>
     <link rel="stylesheet" href="singup.css">
+    <link rel="stylesheet" href="singup.css">
+    <script src="../Back/singup.js" defer></script>
 </head>
 
 <body>
