--- a/Font/singup.html
+++ b/Font/singup.html
@@ -70,8 +70,10 @@
                 </div>
             </div>
 
-            <input type="submit" value="Registrarse">
         </form>
+        <div class="boton-centro">
+            <input type="submit" value="Registrarse">
+        </div>
 
         <div class="login-link">
             ¿Ya tienes cuenta?.<a href="login.html">Inicia sesión</a>
