--- a/Font/login.html
+++ b/Font/login.html
@@ -28,12 +28,14 @@
                 <span></span>
             </div>
 
-            <input type="submit" value="Iniciar Sesión">
-
-            <div class="registrarse">
-                No tengo cuenta. <a href="singup.html">Registrarse</a>
-            </div>
         </form>
+        <div class="boton-centro">
+            <input type="submit" value="Iniciar Sesión">
+        </div>
+
+        <div class="registrarse">
+            No tengo cuenta. <a href="singup.html">Registrarse</a>
+        </div>
     </div>
 </body>
 
