Agregar funcion de registro y correccion de nombres

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="user-actions">
                 <a href="Font/login.html" class="login-link" >Iniciar sesión</a>
                 <p>ó</p>
-                <a href="Font/singup.html" class="login-link">Registrarse</a>
+                <a href="Font/signup.html" class="login-link">Registrarse</a>
             </div>
         </header>
         <nav class="nav-categories">
