--- a/Font/login.html
+++ b/Font/login.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de Sesión</title>
     <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
 <body>
@@ -18,13 +19,17 @@
         <form action="/login" method="post">
             <div class="campo">
                 <input type="text" name="usuario" required placeholder=" ">
-                <label>Nombre de usuario o email</label>
+                <label>
+                    <i class="fa-solid fa-envelope"></i> 
+                    tu@correo.com</label>
                 <span></span>
             </div>
 
             <div class="campo">
                 <input type="password" name="contrasena" required placeholder=" ">
-                <label>Contraseña</label>
+                <label>
+                    <i class="fa-solid fa-key"></i>
+                    Contraseña</label>
                 <span></span>
             </div>
 
