--- a/Font/singup.html
+++ b/Font/singup.html
@@ -8,6 +8,7 @@
     <title>Crear cuenta</title>
     <link rel="stylesheet" href="singup.css">
     <link rel="stylesheet" href="singup.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script src="../Back/singup.js" defer></script>
 </head>
 
@@ -49,7 +50,9 @@
                 <div class="col">
                     <div class="campo">
                         <input type="email" name="email" required placeholder=" ">
-                        <label>Correo electrónico</label>
+                        <label>
+                            <i class="fa-solid fa-envelope"></i>
+                            Email</label>
                         <span></span>
                     </div>
                     <div class="campo">
@@ -59,7 +62,9 @@
                     </div>
                     <div class="campo">
                         <input type="password" name="password" required placeholder=" ">
-                        <label>Contraseña</label>
+                        <label>
+                            <i class="fa-solid fa-key"></i>
+                            Contraseña</label>
                         <span></span>
                     </div>
                     <div class="campo">
