--- a/Font/login.html
+++ b/Font/login.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="registrarse">
-            No tengo cuenta. <a href="singup.html">Registrarse</a>
+            No tengo cuenta. <a href="signup.html">Registrarse</a>
         </div>
     </div>
     <div id="errorMsg" style="color: red; text-align:center; margin-top:10px;"></div>
