--- a/Font/login.html
+++ b/Font/login.html
@@ -28,7 +28,9 @@
             <div class="campo">
                 <!-- Cambié el name a "password" para coincidir con login.js -->
                 <input type="password" name="password" required placeholder=" ">
-                <label>Contraseña</label>
+                <label>
+                    <i class="fa-solid fa-key"></i>
+                    Contraseña</label>
                 <span></span>
             </div>
 
