--- a/Font/signup.html
+++ b/Font/signup.html
@@ -22,17 +22,23 @@
                 <div class="col">
                     <div class="campo">
                         <input type="text" name="name" required placeholder=" ">
-                        <label>Nombre</label>
+                        <label>
+                            <i class="fa-solid fa-user"></i>
+                            Nombre</label>
                         <span></span>
                     </div>
                     <div class="campo">
                         <input type="text" name="apellido_paterno" required placeholder=" ">
-                        <label>Apellido paterno</label>
+                        <label>
+                            <i class="fa-solid fa-user"></i>
+                            Apellido paterno</label>
                         <span></span>
                     </div>
                     <div class="campo">
                         <input type="text" name="apellido_materno" required placeholder=" ">
-                        <label>Apellido materno</label>
+                        <label>
+                            <i class="fa-solid fa-user"></i>
+                            Apellido materno</label>
                         <span></span>
                     </div>
                     <div class="campo">
@@ -42,7 +48,9 @@
                             <option value="Femenino">Femenino</option>
                             <option value="Otro">Otro</option>
                         </select>
-                        <label>Género</label>
+                        <label>
+                            <i class="fa-solid fa-venus-mars"></i>
+                            Género</label>
                         <span></span>
                     </div>
                 </div>
@@ -56,7 +64,9 @@
                     </div>
                     <div class="campo">
                         <input type="text" name="telefono" required placeholder=" ">
-                        <label>Teléfono</label>
+                        <label>
+                            <i class="fa-solid fa-phone"></i>
+                            Teléfono</label>
                         <span></span>
                     </div>
                     <div class="campo">
@@ -68,7 +78,9 @@
                     </div>
                     <div class="campo">
                         <input type="password" name="confirm_password" required placeholder=" ">
-                        <label>Confirmar contraseña</label>
+                        <label> 
+                            <i class="fa-solid fa-key"></i>
+                            Confirmar contraseña</label>
                         <span></span>
                     </div>
                 </div>
