--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header class="header">
             <div class="logo">
-                <img src="images.jpeg" alt="Logo">
+                <a href="index.html"><img src="Font/imgs/mount logo.jpg" alt="Logo" ></a>
             </div>
             <div class="search-bar">
                 <input type="text" placeholder="Buscar en toda la tienda..." class="search-input">
