--- a/Font/dashboard.html
+++ b/Font/dashboard.html
@@ -4,54 +4,41 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dashboard - Mount</title>
-  <style>
-    body { font-family: Arial, Helvetica, sans-serif; background:#f5f7fb; margin:0; padding:0; display:flex; align-items:center; justify-content:center; height:100vh; }
-    .card { background:white; width:92%; max-width:760px; padding:24px; border-radius:12px; box-shadow:0 6px 20px rgba(20,20,50,0.08); }
-    header { display:flex; justify-content:space-between; align-items:center; margin-bottom:18px; }
-    h1 { margin:0; font-size:20px; }
-    .user-info { display:flex; gap:18px; align-items:center; }
-    .avatar { width:64px; height:64px; border-radius:50%; background:linear-gradient(135deg,#9fc5ff,#6b8cff); display:flex; align-items:center; justify-content:center; color:white; font-weight:700; font-size:20px; }
-    .meta { color:#333; }
-    .meta p { margin:6px 0; }
-    .actions { margin-top:18px; display:flex; gap:12px; }
-    button { padding:10px 14px; border-radius:8px; border:0; cursor:pointer; font-weight:600; }
-    .btn-logout { background:#ff5c5c; color:white; }
-    .btn-edit { background:#2d7cff; color:white; }
-    .admin-badge { display:inline-block; padding:6px 10px; background:#ffdf5a; border-radius:8px; font-weight:700; margin-left:8px; }
-  </style>
+  <link rel="stylesheet" href="dashboard.css" />
 </head>
 <body>
-  <div class="card">
+  <main class="card" role="main" aria-labelledby="panelTitle">
     <header>
       <div>
-        <h1>Panel de usuario</h1>
-        <div style="color:#666; font-size:13px;">Bienvenido a la plataforma de cotizaciones — Mount</div>
+        <h1 id="panelTitle">Panel de usuario</h1>
+        <div style="color:var(--muted); font-size:13px;">Bienvenido a la plataforma de cotizaciones — Mount</div>
       </div>
-      <div class="user-info">
-        <div id="avatar" class="avatar">U</div>
+
+      <div class="user-info" aria-live="polite">
+        <div id="avatar" class="avatar" role="img" aria-label="Avatar del usuario">U</div>
         <div class="meta">
-          <div id="userFullName">Usuario</div>
-          <div id="userEmail" style="font-size:13px;color:#777"></div>
+          <div id="userFullName" style="font-weight:700">Usuario</div>
+          <p id="userEmail" aria-hidden="false"></p>
         </div>
       </div>
     </header>
 
-    <section>
-      <h3>Tu información</h3>
+    <section aria-labelledby="infoHeading">
+      <h3 id="infoHeading">Tu información</h3>
       <p id="infoText" style="color:#444">Cargando...</p>
 
       <div class="actions">
-        <button class="btn-edit" id="btnEdit">Editar perfil</button>
-        <button class="btn-logout" id="btnLogout">Cerrar sesión</button>
+        <button type="button" class="btn-edit" id="btnEdit" aria-controls="profileForm">Editar perfil</button>
+        <button type="button" class="btn-logout" id="btnLogout">Cerrar sesión</button>
       </div>
 
-      <div id="adminArea" style="margin-top:18px; display:none;">
+      <div id="adminArea" style="margin-top:18px; display:none;" aria-hidden="true">
         <hr style="margin:12px 0">
         <h4>Área de administrador</h4>
         <p style="color:#333">Funciones de administración aparecerán aquí.</p>
       </div>
     </section>
-  </div>
+  </main>
 
   <script src="dashboard.js" defer></script>
 </body>
