--- a/Font/signup.html
+++ b/Font/signup.html
@@ -8,7 +8,7 @@
     <title>Crear cuenta</title>
     <link rel="stylesheet" href="signup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <script src="../Back/singup.js" defer></script>
+    <script src="../Font/signup.js" defer></script>
 </head>
 
 <body>
