--- a/Font/signup.html
+++ b/Font/signup.html
@@ -63,7 +63,7 @@
                         <span></span>
                     </div>
                     <div class="campo">
-                        <input type="text" name="telefono" required placeholder=" ">
+                        <input type="text" name="telefono" required placeholder=" " maxlength="15" id="telefono" />
                         <label>
                             <i class="fa-solid fa-phone"></i>
                             Teléfono</label>
