--- a/Private/dashboard.html
+++ b/Private/dashboard.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dashboard - Mount</title>
-  <script src="dashboard.js" defer></script>
+  <script src="/dashboard.js" defer></script>
   <link rel="stylesheet" href="dashboard.css" />
 </head>
 
