integracion de pagina principal

--- a/Private/dashboard.html
+++ b/Private/dashboard.html
@@ -31,6 +31,7 @@
       <p id="infoText" style="color:#444">Cargando...</p>
 
       <div class="actions">
+        <a href="/" class="btn-home" role="button">Regresar al inicio</a>
         <button type="button" class="btn-edit" id="btnEdit" aria-controls="profileForm">Editar perfil</button>
         <button type="button" class="btn-logout" id="btnLogout">Cerrar sesión</button>
       </div>
