opciones de admin

--- a/Private/admin-products.html
+++ b/Private/admin-products.html
@@ -1,10 +1,10 @@
 <div class="panel-header">
-  <h3>Gestión de Productos</h3>
   <div class="panel-actions">
-    <input type="search" placeholder="Buscar por nombre o SKU..." class="panel-search">
+    <input type="search" placeholder="Buscar por nombre o SKU..." class="panel-search" aria-label="Buscar productos">
     <button class="btn-add-new"><i class="fa-solid fa-plus"></i> Añadir Producto</button>
   </div>
 </div>
 <div class="panel-content">
-  <p>Aquí se mostrará la tabla de productos.</p>
+  <!-- Aquí irá la tabla de productos -->
+  <p>Contenido de la tabla de productos...</p>
 </div>
