--- a/Private/admin-suppliers.html
+++ b/Private/admin-suppliers.html
@@ -1,10 +1,10 @@
 <div class="panel-header">
-  <h3>Gestión de proveedores</h3>
   <div class="panel-actions">
-    <input type="search" placeholder="Buscar por nombre o RFC..." class="panel-search">
+    <input type="search" placeholder="Buscar por nombre o RFC..." class="panel-search" aria-label="Buscar proveedores">
     <button class="btn-add-new"><i class="fa-solid fa-plus"></i> Añadir Proveedor</button>
   </div>
 </div>
 <div class="panel-content">
-  <p>Aquí se mostrará la tabla de proveedores.</p>
+  <!-- Aquí irá la tabla de proveedores -->
+  <p>Contenido de la tabla de proveedores...</p>
 </div>
