--- a/Private/admin-users.html
+++ b/Private/admin-users.html
@@ -1,10 +1,10 @@
 <div class="panel-header">
-  <h3>Gestión de Usuarios</h3>
   <div class="panel-actions">
-    <input type="search" placeholder="Buscar por nombre o correo..." class="panel-search">
+    <input type="search" placeholder="Buscar por nombre o correo..." class="panel-search" aria-label="Buscar usuarios">
     <button class="btn-add-new"><i class="fa-solid fa-plus"></i> Añadir Usuario</button>
   </div>
 </div>
 <div class="panel-content">
-  <p>Aquí se mostrará la tabla de usuarios.</p>
+  <!-- Aquí irá la tabla de usuarios -->
+  <p>Contenido de la tabla de usuarios...</p>
 </div>
