commit para solucionar errores de rutas

--- a/Font/login.html
+++ b/Font/login.html
@@ -42,7 +42,7 @@
         </form>
 
         <div class="registrarse">
-            No tengo cuenta. <a href="signup.html">Registrarse</a>
+            No tengo cuenta. <a href="/Font/signup.html">Registrarse</a>
         </div>
     </div>
 
