--- a/Font/signup.html
+++ b/Font/signup.html
@@ -102,7 +102,7 @@
                 <input type="submit" value="Registrarse">
             </div>
             <div class="login-link">
-                ¿Ya tienes cuenta?. <a href="login.html">Inicia sesión</a>
+                ¿Ya tienes cuenta?. <a href="/Font/login.html">Inicia sesión</a>
             </div>
         </form>
     </div>
